--- a/templates/Dockerfile
+++ b/templates/Dockerfile
@@ -1,9 +1,8 @@
-FROM python:3.8-slim-buster
-
-RUN apt update -y apt install awscli -y
+FROM PYTHON:3.8-slim-buster
 WORKDIR /app
-
 COPY . /app
-RUN pip install -r requirements.txt
 
-CMD ["python3","app.py"]
+RUN apt update -y && apt install awscli -y
+
+RUN pip install -r requirements.txt
+CMD ["python","app.py"]
